# arrakis

./: .gitignore  README.md
loan/: README.md  pyproject.toml
loan/src/loan_app/: __init__.py  __main__.py  data.json
queues/: README.md  pyproject.toml
queues/src/queues/: __init__.py  __main__.py
src/loan_app/: __init__.py
