[project]
name = "loan-app"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "tanthehack", email = "31630356+tanthehack@users.noreply.github.com" }
]
dependencies = [
    "tabulate>=0.9.0",
    "matplotlib>=3.8.4",
    "plotext>=5.2.8",
    "numpy>=1.26.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"loan-app" = "loan_app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/loan_app"]
