[project]
name = "queues"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "tanthehack", email = "31630356+tanthehack@users.noreply.github.com" }
]
dependencies = [
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"queues" = "queues:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/queues"]
